add more description

--- a/README
+++ b/README
@@ -8,8 +8,12 @@ devide-lame-iTunes.pl
 するためのスクリプトです。
 
 【使い方】
-分割元のファイルがあるディレクトリに 分割設定ファイル.txt を設置して
-devide-lame-iTunes.pl 分割設定ファイル.txt
+1.分割元のファイル があるディレクトリに 分割設定.txt を作成
+2.分割設定.txt に discog から曲リストをコピー
+3.分割設定.txt にアルバム名,年,ジャンル等のメタデータを記入
+4.波形エディタで 分割元のファイル の波形を見て、曲の分割点を決定。
+  その分割点を 分割設定.txt に記入する
+5.devide-lame-iTunes.pl 分割設定.txt を実行
 
 【分割設定ファイルのフォーマット】
 以下のタブ区切りデータを複数個書く事ができる。
@@ -51,7 +55,8 @@ ff:mm:ss.sss
 ・各項目の前後のスペースはトリムされる
 ・アルバム名, 年, ジャンルが空白の場合、前のファイルのデータが使われる。
 ・アーティスト名が空白の場合、前の行のデータが使われる。
-・曲名が空白な場合、連番を使って "Track 9" 等とつく。
+　単独アーティストのアルバムなら、1曲目だけ設定を書けばよい
+・曲名が空白の場合、連番を使って "Track 9" 等とつけられる。
 ・トラック番号が空白の場合、連番の数字がつく
 ・連番はアルバムが変わる毎に（新しいアルバム名が指定される毎に）1からスタートする。
 
