fix typo and perl path

--- a/README
+++ b/README
@@ -28,7 +28,7 @@ divide-lame-iTunes.pl
 このひとかたまりで、ファイル１つ分の分割指示になっている。
 
 "開始点位置", "分割点位置", "終了点位置" は 時分秒.ミリ秒
-ff:mm:ss.sss
+hh:mm:ss.sss
 またはサンプル数
 99999s
 の形式で指定できる。
